Simülasyonda etki alanına göre etkilenecek insanlar bulundu.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "App\\Scripts\\python.exe",
+    "python.pythonPath": "C:\\Users\\set\\AppData\\Local\\Programs\\Python\\Python37\\python.exe",
     "python.linting.pylintEnabled": true,
     "python.linting.enabled": true
 }
